third-party/move/tools/move-cli/tests/sandbox_tests/verify_native_functions_in_multi_module_publish/args.exp
Command `sandbox publish --bundle --override-ordering M --override-ordering N`:
Invalid multi-module publishing: VMError with status MISSING_DEPENDENCY at location Module ModuleId { address: 00000000000000000000000000000042, name: Identifier("M") } at index 0 for function handle
error[E02007]: invalid 'fun' declaration
  ┌─ ./sources/example.move:2:16
  │
2 │     native fun create_signer(addr: address): signer;
  │                ^^^^^^^^^^^^^ Missing implementation for the native function M::create_signer

